src/test/ui/borrowck/issue-62107-match-arm-scopes.stderr
error[E0381]: binding `e` isn't initialized
  --> $DIR/issue-62107-match-arm-scopes.rs:3:11
   |
LL |     let e: i32;
   |         - variable declared here
LL |     match e {
   |           ^ `e` used here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
